--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-fastf1
-pandas
-matplotlib
-seaborn
+fastf1==3.6.0
+flask==3.1.1
+flask-cors==6.0.1
+joblib==1.4.2
+matplotlib==3.10.0
+numpy==2.2.1
+pandas==2.2.3
+scikit-learn==1.6.0
